# onlyoffice-convert-lambda

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-docker.sh  cspell.json  setup.sh
.github/workflows/: build-release.yml
src/: event_handler.rs  http_handler.rs  main.rs
