[package]
name = "onlyoffice-convert-lambda"
version = "0.1.2"
edition = "2024"

[dependencies]
# Lambda core
lambda_runtime = "1.0.1"

# Async runtime
tokio = { version = "1", features = ["macros"] }

# Environment variables
dotenvy = "0.15"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
aws-config = "1.8.12"
aws-sdk-s3 = "1.117.0"

# Basic logging
tracing = "0.1"

# UUID for unique file IDs
uuid = { version = "1.19.0", features = ["v4"] }


[dev-dependencies]
testcontainers = { version = "=0.25.2", features = ["http_wait"] }
testcontainers-modules = { version = "=0.13.0", features = ["minio"] }
